# klish-plugin-sysrepo

./: .gitignore  Makefile.am  README.md  configure.ac
docs/: Makefile.am  klish-plugin-sysrepo.ru.md
src/: Makefile.am  klish_plugin_sysrepo.h  kly.c  pline.c  pline.h  plugin.c  private.h  show.c  syms.c
xml/: sysrepo.xml
yang/: klish.yang
