lib_LTLIBRARIES += libklish-plugin-sysrepo.la
libklish_plugin_sysrepo_la_SOURCES =
libklish_plugin_sysrepo_la_LDFLAGS = $(AM_LDFLAGS)
libklish_plugin_sysrepo_la_LIBS =
libklish_plugin_sysrepo_la_CFLAGS = $(AM_CFLAGS)
#libklish_plugin_sysrepo_la_LIBADD = libsysrepo.la

libklish_plugin_sysrepo_la_SOURCES += \
	src/plugin.c \
	src/syms.c \
	src/show.c \
	src/pline.c \
	src/kly.c

include_klish_HEADERS += \
	src/klish_plugin_sysrepo.h
